--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.21.0",
     "express-session" : "1.18.0",
     "@azure/msal-node": "^1.0.0",
+    "@azure/event-hubs": "^5.11.0",
     "@microsoft/microsoft-graph-client": "^3.0.7",
     "isomorphic-fetch": "^3.0.0",
     "passport": "^0.7.0",
